Hero overflow via flyin fix

--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -13,4 +13,5 @@
   background-color: base.$c-bg-accent;
   transform-origin: 50% 0%;
   transform: scaleY(0);
+  overflow-x: hidden;
 }
